# twitter-points-farmer

./: .env  .gitignore  Cargo.toml  clean-docker.sh  docker-compose.yml  readme.md  start-with-docker.sh  start.sh
.github/workflows/: ci.yml
migrations/: 0001_create_users_table.up.sql  0002_add_total_points_field_to_users.down.sql  0002_add_total_points_field_to_users.up.sql  0002_create_tasks_table.up.sql  0003_create_tasks_table.up.sql  0003_tasks_remove_time_created.down.sql  0003_tasks_remove_time_created.up.sql  0004_add_finished_tasks_to_user.down.sql  0004_add_finished_tasks_to_user.up.sql  0004_last_created_user_id.down.sql  0004_last_created_user_id.up.sql  0005_add_referal_points_to_user.down.sql  0005_add_referal_points_to_user.up.sql  0005_users_multiplier.down.sql  0005_users_multiplier.up.sql  0006_add_time_created_to_tasks.down.sql  0007_user_add_referred_by.down.sql  0007_user_add_referred_by.up.sql  0008_user_add_referrer_id.down.sql  0008_user_add_referrer_id.up.sql  0009_task_add_link.down.sql  0009_task_add_link.up.sql  0010_task_add_button_text.down.sql  0010_task_add_button_text.up.sql
src/: constants.rs  main.rs  password.rs  state.rs
src/db/: connect.rs  mod.rs  queries.rs
src/db/queries/: mod.rs  tasks.rs  users.rs
src/jwt/: generate.rs  mod.rs  validate.rs
src/middlewares/: mod.rs  require_auth.rs  require_auth_jwt.rs  require_security_hash.rs
src/middlewares/rate_limiter/: error.rs  mod.rs  rate_limit_info.rs  rate_limit_mw.rs  rate_limiter_config.rs  redis_interactor.rs
src/models/: dto.rs  mod.rs  tasks.rs  users.rs
src/models/dtos/: tasks.rs  users.rs
src/routes/: dbg.rs  mod.rs  tasks.rs  users.rs
