[package]
name = "twitter-points-farmer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.112"
reqwest = {version = "0.11.18", features=["json"]}
serde = { version = "1.0.194", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres","runtime-tokio-rustls"] }
dotenv = "0.15.0"
