[package]
name = "twitter-points-farmer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.112"
reqwest = {version = "0.11.18", features=["json"]}
serde = { version = "1.0.194", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres","runtime-tokio-rustls","chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = "9.2.0"
password-encryptor = "2.0.0"
tower-http = { version = "0.5.2", features = ["cors"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
redis-macros = "0.3.0"

[profile.release]
strip = true      # Remove symbols from binary
opt-level = 3     # Optimize for size
lto = true        # Optimize at the link stage, dont care for longer linking times.
codegen-units = 1 # Longer compile time at expense of build time paralelization